# solana-rust-http-server

./: Cargo.toml  readme.md  render.yaml
src/: handlers.rs  main.rs  models.rs  utils.rs
src/handlers/: error.rs  health.rs  keypair.rs  message.rs  token.rs  transfer.rs
