[package]
name = "solana-fellowship-server"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "1.3.55"
ed25519-dalek = "1.0.1"
solana-program = "1.18.4"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
bs58 = "0.5"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
spl-associated-token-account = "1.1.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
